# PIDSettings-VibeCoding-

./: .gitignore  ALGORITHMS.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md
examples/: sample_flight.csv
python_version/: ADVANCED_METHODS.md  PORTABLE_GUIDE.md  README.md  advanced_pid_tuning.py  build_exe.bat  build_exe.py  build_exe.sh  log_parser.py  models.py  pid_calculator.py  pid_tuner.py  requirements.txt  signal_processing.py  system_identification.py
src/: log_parser.rs  main.rs  models.rs  pid_calculator.rs
